# mouse-reveal

./: Cargo.toml  Makefile  dgs-mouse-reveal.desktop  install.sh
.github/workflows/: release.yml
src/: animations.rs  logging.rs  main.rs  models.rs
